--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Notes App</title>
   </head>
   <body>
     <div id="root"></div>
